# TradingSystemSimulator

./: .env.example  .gitignore  Plan.md  README.md  config.py  docker-compose.yml  main.py  models.py  pyproject.toml
api/: server.py
core/: event_bus.py
db/: persistence.py  repository.py
db/migrations/: 001_initial.sql
execution/: order_manager.py
feeds/: market_data.py
risk/: position_tracker.py  risk_manager.py  stop_loss.py
strategies/: base.py  bollinger_breakout.py  engine.py  mean_reversion.py  pairs_trading.py
tests/: conftest.py  test_api.py  test_event_bus.py  test_integration.py  test_market_data.py  test_order_manager.py  test_position_tracker.py  test_repository.py  test_risk_manager.py  test_stop_loss.py  test_strategy.py
